--- a/css/navi.css
+++ b/css/navi.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Raleway');
+
+
 li{
     text-decoration: none;
     display: block;
@@ -30,13 +33,14 @@ a{
 .main-nav {
     opacity: 0.95;
     position:fixed;
-    width:100%;
+    top: 0;
+    left: 0;
+    right: 0;
     background-color: rgba(50, 184, 136, 0.93);
     list-style:none;
     margin-top: 0;
     margin-bottom: 0px;
-    font-size: 90%;
-    box-shadow: 0px 0px 1px rgba(77, 77, 77, 0.76);
+    font-size: 80%;
     padding-right: 2%;
     z-index: 9999;
     letter-spacing: 2px;
@@ -48,8 +52,8 @@ a{
 .main-nav li {
     
     display: inline-block;
-    margin-left: 30px;
-    margin-right: 10px;
+    margin-left: 10px;
+    margin-right: 20px;
     margin-top: 10px;
     float: right;
     color: white;
@@ -89,5 +93,147 @@ a{
     border-radius: 50%;
     margin-top: -40%;
     cursor: pointer;
+}
 
+
+/* -----------  overlay nav ------------ */
+
+.overlay {
+    display:block;
+    font-family:"Raleway", 'Arial', sans-serif;
+    height: 0;
+    width: 100%;
+    position: fixed;
+    z-index: 9999;
+    top: 0;
+    left: 0;
+    background-color: rgba( 0, 170,85, 0.97);
+    overflow: hidden;
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+}
+
+.overlay-content {
+  position: relative;
+  top: 30%; /* 25% from the top */
+  left:10%;
+  width: 100%; /* 100% width */
+  text-align: left; /* Centered text/links */
+  margin-top: 22vh; /* 30px top margin to avoid conflict with the close button on smaller screens */
+}
+
+.overlay .overlay-content a {
+    display: block;
+    padding: 12px;
+    text-decoration: none;
+    font-size: 140%;
+    color: white;
+    -webkit-transition: 0.3s;
+    transition: 0.3s;
+}
+
+.overlay .closebtn {
+
+    position: absolute;
+    top: -2%;
+    right:1%;
+    font-size: 60px;
+    color: white;
+    text-decoration:none;
+}
+.cal {
+	display: block;
+	float:left;
+	margin: 0;
+}
+
+.cal:first-child { margin-left: 0; } 
+
+.overlay .res-box-1-of-6{
+    opacity: 0.98;
+  	width: 15.33%;
+    display: block;
+    background-color: rgb(0, 132, 66);
+    height: 100%;
+    overflow: hidden;
+}
+.overlay .res-box-5-of-6{
+    width: 83.06%;
+}
+#open{
+    font-size: 250%;
+    position: fixed;
+    color: #00C6AE;
+    right: 1%;
+    top: 3%;
+    display: none;
+    z-index: 9999;
+}
+.overlay .res-proimg{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+}
+.overlay ion-icon[name=notifications-outline]{
+   font-size: 160%;
+}
+.overlay .side-bar{
+    width: 100%;
+    display: block;
+    margin: 25vh auto;
+    
+}
+.overlay .side-bar a{
+    padding: 12px;
+    font-size: 140%;
+   
+    
+}
+.overlay .side-bar a ion-icon{
+    color: white;
+    display: block;
+    opacity: 1;
+    margin: 20% auto;
+    
+}
+
+.badge1 {
+    position:relative;
+}
+
+.badge1[data-badge]:after {
+   content:attr(data-badge);
+   position:absolute;
+   top:-10px;
+   right: -8px;
+    padding: 0 1px 0px 2px;
+   font-size: 90%;
+   font-weight: 800;
+    font-family: 'Raleway', fantasy;
+    letter-spacing: normal;
+   background:#f14141;
+   color:white;
+   min-width: 15px;
+    height:17px;
+   text-align:center;
+   line-height:15px;
+   border-radius: 2px;
+
+}
+.badge1[data-badge=""]:after { content: ''; display: none;}
+
+
+@media only screen and (max-width: 920px) {
+    .main-nav { display: none; }
+    #open{display: inline-block;}   
+}
+@media only screen and (max-width: 480px) {
+    .icon-nav{display: none;}
+    .sticky{box-shadow: none;border: none; }
+    #open{display: block;}
+}
+@media only screen and (max-width: 380px){
+    .overlay .overlay-content a {font-size: 120%;}
 }
