--- a/css/tform.css
+++ b/css/tform.css
@@ -1,6 +1,6 @@
 body {
 	margin:  0;
-    background-image: url('img/tutor-5.jpg');
+    background-image: url('img/background7.jpg');
 	background-repeat: no-repeat;
 	background-position: center center;
 	background-size: cover;
@@ -25,7 +25,7 @@ body {
 	-ms-align-items: center;
 	-moz-align-items: center;
 	-webkit-align-items: center;
-    background: rgba(0,0,0,0.2);
+    background: rgba(255,255,255,0.1);
 }
 .wizard-v4-content   {
 	background: rgba(255,255,255, 0.95 );
@@ -55,7 +55,7 @@ body {
 }
 .wizard-form .wizard-header .heading {
 	color: #333;
-	font-size: 32px;
+	font-size: 28px;
 	font-weight: 700;
 	margin: 0;
 	padding: 8px 0 10px;
@@ -435,7 +435,7 @@ input[type="radio"]:not(:checked) + label:after {
 }
 .inner .form-row .form-holder select {
 	font-size: 15px;
-    color: #666;
+    color: #999;
     background: transparent url('icons/wizard_v4_icon.png') no-repeat scroll;
     background-position: right 0 center;
     font-style: italic;
@@ -444,17 +444,18 @@ input[type="radio"]:not(:checked) + label:after {
     position: relative;
     padding-left: 8px;
 }
-.inner .form-row .form-holder select:active {
-    font-style: italic;
+
+.inner .form-row .form-holder option:first-child {
+    color: #b1aeae;
+    font-style: italic
 }
-.inner .form-row .form-holder option {
-    padding-left: 5px
-}
-.inner .form-row .form-holder :selected {
-    font-weight: 700
+.inner .form-row .form-holder option:not(:first-child) {
+    color: #666;
+    font-style: normal
 }
 .inner .form-row .form-holder select:focus {
 	border-bottom: 2px solid #6bc734;
+    
 }
 
 .inner .form-row .form-holder .form-control:focus,
@@ -600,6 +601,9 @@ input[type="radio"]:not(:checked) + label:after {
 	.inner .form-row .form-holder.form-holder-1 {
 	    width: 100%;
 	}
+	.inner .form-row .form-holder.form-holder-3 {
+        width: 100%;
+    }
 	.inner .form-row .form-holder {
 		padding: 0;
 	}
@@ -616,13 +620,22 @@ input[type="radio"]:not(:checked) + label:after {
 	    margin-right: 0;
 	    display: block;
 	}
-    	.inner .form-row.form-row-gender .form-holder select {
+	.inner .form-row.form-row-gender .form-holder select {
 	    float: none;
 	    width: 100%;
         margin-left: 0px;
 	    margin-bottom: 8px;
 	    margin-right: 0;
 	    display: block;
+	}
+    .inner .form-row .form-holder select {
+	    width: 100%;
+        margin-left: 0px;
+	    margin-bottom: 8px;
+	    margin-right: 0;
+        font-style: normal;
+	    display: block;
+        color: #999;
 	}
 	.form-register .steps li a .title .step-icon {
 		width: 40px;
@@ -652,4 +665,101 @@ input[type="radio"]:not(:checked) + label:after {
 .label-checkbox a{
     text-decoration: none;
     color: #4caf50
+}
+
+.div-error {
+    color: orangered;
+    font-size: 65%;
+    margin-top: 1px;
+    display: none;
+    text-align: right;
+} 
+.error{
+    color: orangered;
+    font-size: 11px;
+}
+
+
+.success {
+    	background: rgba(255,255,255, 0.95 );
+	width: 780px;
+	box-shadow: 0px 8px 20px 0px rgba(0, 0, 0, 0.15);
+	-o-box-shadow: 0px 8px 20px 0px rgba(0, 0, 0, 0.15);
+	-ms-box-shadow: 0px 8px 20px 0px rgba(0, 0, 0, 0.15);
+	-moz-box-shadow: 0px 8px 20px 0px rgba(0, 0, 0, 0.15);
+	-webkit-box-shadow: 0px 8px 20px 0px rgba(0, 0, 0, 0.15);
+	border-radius: 10px;
+	-o-border-radius: 10px;
+	-ms-border-radius: 10px;
+	-moz-border-radius: 10px;
+	-webkit-border-radius: 10px;
+	margin: 110px 0;
+	font-family: 'Open Sans', sans-serif;
+    display: none
+}
+.success .success-message {
+    padding: 40px;
+    padding-bottom: 5px
+}
+.success h1 {
+    color: #666;
+    text-align: center;
+    width: 100%;
+    margin-top: 10px;
+}
+.success img{
+    margin-left: 43%;
+    width: 120px;
+    height: 120px
+}
+.success p {
+    color: #666;
+    margin-top: 10px;
+}
+.success .content {
+    text-align: center;
+    margin-top: 30px;
+    font-size: 110%;
+    margin-bottom: 5px
+}
+
+.success .content2 {
+    margin: 0;
+    padding: 0;
+    font-size: 100%;
+}
+.success h3{
+    text-align: center;
+    width: 100%;
+    margin-bottom: 5px;
+    margin-top: 0;
+    font-size: 16px;
+    font-family: sans-serif;
+    color: #696969;
+}
+.success .content3 {
+    text-align: center;
+    margin-top: 0px;
+    margin-bottom: 0;
+    color: #999;
+    font-size: 80%;
+    padding: 2px 50px;
+    
+}
+.success span {
+    font-size: 90%;
+    padding: 0
+}
+.success .next-to-do {
+    border-top: 1px solid #e5e5e5;
+     margin-top: 50px;
+   background-color: rgba(184, 212, 185, 0.07);
+    padding: 20px;
+    padding-bottom: 30px
+}
+.success .next-to-do a{
+    text-decoration: none;
+    color: #4caf50;
+    padding: 0 2px
+    
 }
